<resources>
    <string name="app_name">Financial</string>
    <!--Authentication-->
    <!--activity_login-->
    <string name="signup">Sign Up</string>
    <string name="login">Log in</string>
    <string name="sign_in_with_google">Sing in With Google</string>
    <string name="do_login">Faça login em sua conta</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="forgot_password">Esqueci a senha</string>
    <!--activity_register-->
    <string name="create_account">Create Account</string>
    <string name="name">Nome</string>
    <string name="confirm_password">Confirmar senha</string>
    <string name="register">Cadastrar</string>
    <!--UserRepository-->
    <string name="email_not_found">Este email não está cadastrado. Por favor, realize o cadastro.</string>
    <string name="email_verification_error">Desculpe, não foi possível enviar o email de verificação. Por favor, tente mais tarde.</string>
    <string name="email_verification_success">E-mail de verificaçaão enviado com sucesso.</string>
    <string name="currentuser_not_found">Desculpe, não foi possível recuperar o usuário atual.</string>
    <string name="user_not_found">Desculpe usuário não foi encontrado. Tente novamente mais tarde.</string>
    <string name="confirm_email">Por favor, realize a confirmação do seu e-mail e tente fazer o login. </string>
    <string name="error_login_with_google">Erro ao realizar login com Google. Por favor, tente mais tarde.</string>
    <!--UserViewModel-->
    <string name="please_insert_email">Por favor, insira um email</string>
    <string name="please_insert_password">Por favor, insira a senha</string>
    <string name="please_insert_name">Por favor, insira seu nome.</string>
    <string name="different_passwords">A senhas estão diferentes. Por favor, verifique as senhas.</string>
    <string name="type_email">Digite um email.</string>
    <string name="type_email_valid">Digite um email válido.</string>
    <!--LoginActivity-->
    <string name="sent_password_reset">E-mail de redefinação de senha enviado com sucesso.</string>
    <string name="request_email_confirm">Para prosseguir com o login é necessário que você confirme seu e-mail. Verifique sua caixa de spam.</string>
    <string name="resend_email_verification">Reenviar o email de verificação</string>
    <!--ProfileFragment-->
    <string name="app_protection">Proteção do app</string>
    <string name="request_authentication">Solicitar autenticação toda vez ao entrar no app</string>
    <string name="error_update_email">Houve um erro na tentativa de mudar seu email. Por favor, tente mais tarde.</string>
    <!--***************-->
    <string name="password_incorrect">Senha incorreta. Tente novamente.</string>
    <string name="desc_logout">Deseja realmente sair do aplicativo?</string>
    <string name="enter_email">Por favor, digite seu e-mail cadastrado</string>
    <string name="reset_password">Redefinir Senha</string>

    <string name="profile">Perfil</string>
    <string name="title_logout">Deseja sair?</string>

    <string name="authentication_to_access">Autenticação para acessar a conta</string>
    <string name="tap_cancel_call_login">Se tocar em cancelar, você precisará realizar o login normalmente.</string>
    <!--*******Authentication********-->

    <!--Transaction-->
    <string name="transaction">Transação</string>
    <string name="transactions">Transações</string>
    <!--fragment_transaction-->
    <string name="lancamentos">Lançamentos</string>
    <string name="balance">Saldo</string>
    <!--activity_transaction_form-->
    <string name="incoming">Entrada</string>
    <string name="outflow">Saida</string>
    <string name="duedate">Data de Vencimento</string>
    <string name="place">Local</string>
    <string name="value_expenditure">Valor da despesa</string>
    <string name="value_profit">Valor da receita</string>
    <string name="expenditure">Despesa</string>
    <string name="income">Receita</string>
    <!--TransactionViewModel-->
    <string name="please_insert_amount_valid">Por favor, insira um valor válido</string>
    <string name="select_category_transaction">Por favor, selecione uma categoria para está transação</string>
    <!--TransactionFormActivity-->
    <string name="wait">Aguarde</string>
    <string name="saving">Salvando…</string>
    <!--***************-->
    <string name="revenues_month">Receita Mensal</string>
    <string name="profit">Lucro</string>

    <string name="image_category">Image Category</string>
    <string name="title_want_remove_transaction">Excluir transação</string>
    <string name="desc_want_remove_transaction">Deseja remover está transação ?</string>

    <string name="success_update_transaction">Transação atualizada com sucesso!</string>
    <string name="success_save_transaction">Transação adicionada com sucesso!</string>
    <string name="success_delete_transaction">Transação exluida com sucesso!</string>
    <string name="transaction_not_found">Desculpe, está transação não foi encontrada. Tente novamente mais tarde.</string>
    <string name="empty_transactions">Não foi encontrada nenhuma transação neste mês</string>
    <!--*******Transaction********-->

    <!--Everyone-->
    <string name="yes">Sim</string>
    <string name="currency">R$</string>
    <string name="cancel">Cancelar</string>
    <string name="remove">Excluir</string>
    <string name="save">Salvar</string>
    <string name="value">Valor</string>
    <string name="select">Selecionar</string>
    <string name="zeroed_value">0,00</string>
    <string name="zeroed_value_currency">R$0,00</string>
    <string name="category">Categoria</string>
    <string name="desc">Descrição</string>
    <string name="add">Adicionar</string>
    <!--*******Everyone********-->

    <!--Goals-->
    <string name="goal">Objetivo</string>
    <string name="goals">Objetivos</string>
    <string name="add_goal">Adicionar objetivo</string>
    <string name="date_goal">Data do objetivo</string>
    <string name="value_goal">Valor do objetivo</string>
    <string name="update_goal">Editar objetivo</string>
    <string name="title_want_remove_goal">Excluir objetivo</string>
    <string name="desc_want_remove_goal">Deseja remover este objetivo ?</string>
    <string name="please_insert_finishday">Por
        , insira uma data para o seu objetivo</string>
    <!--*******Goals********-->


    <!--Filters-->
    <string name="filters">Filtros</string>
    <string name="date">Data</string>
    <string name="max_value">Maior Valor</string>
    <string name="min_value">Menor Valor</string>
    <string name="standard_order">Ordenação padrão</string>
    <string name="show_results">Ver resultados</string>
    <string name="success_save_goal">Objetivo salvo com sucesso!</string>
    <string name="order_by">Ordernar por</string>
    <!--*******Filters********-->

    <!--Dialog Month Picker-->
    <string name="symbol_previous">«</string>
    <string name="symbol_next">»</string>
    <!--Months-->
    <string name="jan">Jan</string>
    <string name="fev">Fev</string>
    <string name="mar">Mar</string>
    <string name="abr">Abr</string>
    <string name="mai">Mai</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="ago">Ago</string>
    <string name="set">Set</string>
    <string name="out">Out</string>
    <string name="nov">Nov</string>
    <string name="dez">Dez</string>
    <!--*******Dialog Month Picker********-->

    <!-- Errors -->
    <string name="ERROR_UNEXPECTED">Um erro inesperado ocorreu. Tente novamente mais tarde.</string>
    <string name="ERROR_INTERNET_CONNECTION">Conexão à internet necessária para uso da applicação.</string>
    <string name="ERROR_REQUEST">Não foi possível enviar sua solicitação. Por favor, tente novamente mais tarde.</string>
    <!--*******Errors********-->


    <!--Erros do Firebase Auth-->
    <string name="MISSING_AUTHENTICATION">Usuário não autenticado</string>
    <string name="email_badly_formatted">Digite um email válido, ele está formatado incorretamente.</string>
    <!--    -->
    <string name="error_login_custom_token">O formato do token personalizado está incorreto. Verifique a documentação.</string>
    <string name="error_login_custom_token_mismatch">O token personalizado corresponde a um público diferente.</string>
    <string name="error_login_credential_malformed_or_expired">A credencial de autenticação fornecida está malformada ou expirou.</string>
    <string name="error_login_invalid_email">O endereço de e-mail está formatado incorretamente.</string>
    <string name="error_login_wrong_password">A senha é inválida ou o usuário não tem uma senha.</string>
    <string name="error_login_user_mismatch">As credenciais fornecidas não correspondem ao usuário conectado anteriormente.</string>
    <string name="error_login_requires_recent_login">Esta operação é sensível e requer autenticação recente. Faça login novamente antes de repetir esta solicitação.</string>
    <string name="error_login_accounts_exits_with_different_credential"> Já existe uma conta com o mesmo endereço de e-mail, mas com credenciais de login diferentes. Faça login usando um provedor associado a este endereço de e-mail.</string>
    <string name="error_login_email_already_in_use">O endereço de e-mail já está sendo usado por outra conta.</string>
    <string name="error_login_credential_already_in_use">Esta credencial já está associada a uma conta de usuário diferente.</string>
    <string name="error_login_user_disabled">A conta do usuário foi desabilitada por um administrador.</string>
    <string name="error_login_user_not_found">Não há registro de usuário correspondente a este identificador. O usuário pode ter sido excluído.</string>
    <string name="error_login_operation_not_allowed">Esta operação não é permitida. Você deve habilitar este serviço no console.</string>
    <string name="error_login_password_is_weak">A senha fornecida é inválida.</string>
    <string name="error_login_user_token_expired">A credencial do usuário não é mais válida. O usuário deve fazer login novamente</string>
    <string name="error_login_invalid_user_token">A credencial do usuário não é mais válida. O usuário deve entrar novamente.</string>
    <string name="error_login_default_error">Desculpe, houve um erro inesperado na autenticação.</string>

    <!---->

</resources>