<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@+id/nav_transaction">

    <fragment
        android:id="@+id/nav_transaction"
        android:name="br.com.casadedeus.view.TransactionFragment"
        android:label="@string/transaction"
        tools:layout="@layout/fragment_transaction">
        <action
            android:id="@+id/action_TransactionFragment_to_GoalFragment"
            app:destination="@id/nav_goal" />
    </fragment>

    <fragment
        android:id="@+id/nav_goal"
        android:name="br.com.casadedeus.view.GoalFragment"
        android:label="@string/goal"
        tools:layout="@layout/fragment_goal">
        <action
            android:id="@+id/action_GoalFragment_to_ProfileFragment"
            app:destination="@id/nav_profile" />
        <!--argument
            android:name="taskfilter"
            android:defaultValue="1"
            app:argType="integer" /-->
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="br.com.casadedeus.view.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_ProfileFragment_to_TransactionFragment"
            app:destination="@id/nav_transaction" />
    </fragment>

</navigation>