<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llm_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/selector_bg_toolbar"
        android:elevation="20dp"
        android:orientation="vertical"
        android:paddingTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/img_back_transactions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/expenditure"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/img_back_transactions"
            app:layout_constraintLeft_toRightOf="@id/img_back_transactions"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/txt_whatvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/value_expenditure"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title" />

        <TextView
            android:id="@+id/txt_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/currency"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_whatvalue" />

        <me.abhinay.input.CurrencyEditText
            android:id="@+id/edit_valor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/zeroed_value"
            android:inputType="number"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            android:paddingVertical="8dp"
            android:text="@string/zeroed_value"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/txt_currency"
            app:layout_constraintTop_toBottomOf="@+id/txt_whatvalue" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    app:layout_constraintBottom_toBottomOf="@id/img_back_transactions"
    app:layout_constraintLeft_toRightOf="@+id/img_back_transactions"

    <!--Button
        android:id="@+id/add_expenditure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@color/transparent"
        android:foreground="?selectableItemBackground"
        android:text="@string/save" /-->

    <!--com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@null"
        android:src="@drawable/ic_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" /-->
    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_btn_save"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llm_header">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_saida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/shape_radiobutton"
                android:checked="true"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:text="@string/outflow" />

            <RadioButton
                android:id="@+id/radio_entrada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_radiobutton"
                android:padding="5dp"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:text="@string/incoming" />
        </RadioGroup>


        <!--Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:spinnerMode="dropdown" /-->


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_duedate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/duedate" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:focusable="false"
                android:hint="@string/category" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/desc"
                android:inputType="textCapSentences|textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_razao_social"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/place"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <!--Button
            android:id="@+id/addExpenditure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/shape_btn_add_expenditure"
            android:onClick="@null"
            android:paddingHorizontal="120dp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textStyle="bold" /-->
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
